@@ -1,6 +1,8 @@
 WebHelpers ChangeLog
 
 0.2.1 (**svn**)
+* button_to accepts method keyword so you can PUT and DELETE with it. 
+  (Follows #4914 Rails changeset)
 * Fixed auto_link to parse more valid url formats (Thanks Jamie Wilkinson).
 * Sync'd text helper from latest Rails version.
 * Fixed form tag's method matching to be case insensitive.
